[gd_scene load_steps=54 format=2]

[ext_resource path="res://asset/button/btn_setting.png" type="Texture" id=1]
[ext_resource path="res://asset/button/btn_home.png" type="Texture" id=2]
[ext_resource path="res://asset/button/btn_home_press.png" type="Texture" id=3]
[ext_resource path="res://asset/button/btn_greenhouse.png" type="Texture" id=4]
[ext_resource path="res://asset/button/btn_backyard.png" type="Texture" id=5]
[ext_resource path="res://asset/button/btn_backyard_press.png" type="Texture" id=6]
[ext_resource path="res://asset/button/btn_more.png" type="Texture" id=7]
[ext_resource path="res://asset/slide_left_disabled.png" type="Texture" id=8]
[ext_resource path="res://asset/button/btn_more_press.png" type="Texture" id=9]
[ext_resource path="res://asset/slide_left_press.png" type="Texture" id=10]
[ext_resource path="res://asset/button/btn_setting_press.png" type="Texture" id=11]
[ext_resource path="res://asset/button/btn_greenhouse_press.png" type="Texture" id=12]
[ext_resource path="res://asset/slide_left.png" type="Texture" id=13]
[ext_resource path="res://asset/slide_right_press.png" type="Texture" id=14]
[ext_resource path="res://asset/slide_right.png" type="Texture" id=15]
[ext_resource path="res://asset/slide_right_disabled.png" type="Texture" id=16]
[ext_resource path="res://asset/font/VarelaRound-Regular.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://asset/button/btn_market.png" type="Texture" id=18]
[ext_resource path="res://asset/button/btn_market_press.png" type="Texture" id=19]
[ext_resource path="res://asset/button/btn_primary.png" type="Texture" id=20]
[ext_resource path="res://asset/button/btn_primary_pressed.png" type="Texture" id=21]
[ext_resource path="res://template/text-title-lg-outline.tres" type="DynamicFont" id=22]
[ext_resource path="res://asset/button/btn_secondary_pressed.png" type="Texture" id=23]
[ext_resource path="res://asset/button/btn_secondary.png" type="Texture" id=24]
[ext_resource path="res://script/Camera.gd" type="Script" id=25]
[ext_resource path="res://asset/button/btn_more_hov.png" type="Texture" id=26]
[ext_resource path="res://asset/button/btn_setting_hov.png" type="Texture" id=27]
[ext_resource path="res://asset/button/btn_backyard_hov.png" type="Texture" id=28]
[ext_resource path="res://asset/button/btn_market_hov.png" type="Texture" id=29]
[ext_resource path="res://asset/button/btn_home_hov.png" type="Texture" id=30]
[ext_resource path="res://asset/button/btn_greenhouse_hov.png" type="Texture" id=31]
[ext_resource path="res://asset/ui/board.png" type="Texture" id=32]
[ext_resource path="res://asset/button/btn_close.png" type="Texture" id=33]
[ext_resource path="res://asset/button/btn_md.png" type="Texture" id=34]
[ext_resource path="res://asset/button/btn_sound_off.png" type="Texture" id=35]
[ext_resource path="res://asset/button/btn_sound_on.png" type="Texture" id=36]
[ext_resource path="res://asset/button/btn_md_hover.png" type="Texture" id=37]
[ext_resource path="res://asset/button/btn_sound_off_hover.png" type="Texture" id=38]
[ext_resource path="res://asset/button/btn_sound_on_hover.png" type="Texture" id=39]
[ext_resource path="res://asset/temp/social.png" type="Texture" id=40]
[ext_resource path="res://asset/star.png" type="Texture" id=41]
[ext_resource path="res://asset/currency_mineral.png" type="Texture" id=42]
[ext_resource path="res://asset/button/btn_md_press.png" type="Texture" id=43]
[ext_resource path="res://asset/button/btn_sound_off_press.png" type="Texture" id=44]
[ext_resource path="res://asset/button/btn_sound_on_press.png" type="Texture" id=45]
[ext_resource path="res://asset/button/btn_close_press.png" type="Texture" id=46]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 3
outline_color = Color( 0.376471, 0.607843, 0.117647, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 3
outline_color = Color( 0.113725, 0.188235, 0.341176, 1 )
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_size = 4
outline_color = Color( 0.356863, 0.180392, 0.105882, 1 )
extra_spacing_bottom = -3
extra_spacing_space = -1
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=4]
size = 36
outline_size = 4
outline_color = Color( 0.180392, 0.305882, 0.470588, 1 )
extra_spacing_bottom = -3
extra_spacing_space = -1
font_data = ExtResource( 17 )

[sub_resource type="DynamicFont" id=5]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=6]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("transition/overlay_transition:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -34 ), Vector2( -40, -34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("transition/overlay_transition:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1709 ), Vector2( 812, 1709 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("transition/overlay_transition:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -40, -34 ), Vector2( 772, -34 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("transition/overlay_transition:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 812, 1709 ), Vector2( 0, 1709 ) ]
}

[node name="Camera" type="Camera2D"]
position = Vector2( 363.076, 640.723 )
script = ExtResource( 25 )

[node name="bg_nav_foot" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -370.0
margin_top = 489.0
margin_right = 360.0
margin_bottom = 1000.0
color = Color( 0.870588, 0.941176, 0.933333, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="nav_foot" type="VBoxContainer" parent="bg_nav_foot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 17.0
margin_right = -1.0
margin_bottom = -136.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="bg_nav_foot/nav_foot"]
margin_right = 729.0
margin_bottom = 122.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_home" type="TextureButton" parent="bg_nav_foot/nav_foot/HBoxContainer" groups=[
"menu_btn",
]]
margin_left = 25.0
margin_right = 137.0
margin_bottom = 122.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 30 )

[node name="btn_greenhouse" type="TextureButton" parent="bg_nav_foot/nav_foot/HBoxContainer" groups=[
"menu_btn",
]]
margin_left = 167.0
margin_right = 279.0
margin_bottom = 122.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 31 )

[node name="btn_yard" type="TextureButton" parent="bg_nav_foot/nav_foot/HBoxContainer" groups=[
"menu_btn",
]]
margin_left = 309.0
margin_right = 420.0
margin_bottom = 122.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 28 )

[node name="btn_market" type="TextureButton" parent="bg_nav_foot/nav_foot/HBoxContainer" groups=[
"menu_btn",
]]
margin_left = 450.0
margin_right = 562.0
margin_bottom = 122.0
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 29 )

[node name="btn_more" type="TextureButton" parent="bg_nav_foot/nav_foot/HBoxContainer" groups=[
"menu_btn",
]]
margin_left = 592.0
margin_right = 703.0
margin_bottom = 122.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 26 )

[node name="bg_nav_head" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -366.0
margin_top = -979.0
margin_right = 359.0
margin_bottom = -482.0
color = Color( 0.870588, 0.941176, 0.933333, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageName" type="Label" parent="bg_nav_head"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.51
margin_top = -109.438
margin_right = 159.49
margin_bottom = -64.4378
custom_fonts/font = ExtResource( 22 )
text = "%MENU_NAME%"
align = 1
autowrap = true
uppercase = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_setting" type="TextureButton" parent="bg_nav_head" groups=[
"menu_btn",
]]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 592.0
margin_top = -142.0
margin_right = 703.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_info" type="HBoxContainer" parent="bg_nav_head"]
anchor_top = 1.0
anchor_right = 0.004
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 21.0
margin_right = 290.1
margin_bottom = 58.0
custom_constants/separation = 200
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mineral" type="TextureButton" parent="bg_nav_head/player_info"]
margin_right = 31.0
margin_bottom = 37.0
texture_normal = ExtResource( 42 )

[node name="amount" type="Label" parent="bg_nav_head/player_info/mineral"]
margin_left = 35.0
margin_top = 5.0
margin_right = 146.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "%amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exp" type="TextureButton" parent="bg_nav_head/player_info"]
margin_left = 231.0
margin_right = 270.0
margin_bottom = 37.0
texture_normal = ExtResource( 41 )

[node name="amount" type="Label" parent="bg_nav_head/player_info/exp"]
anchor_left = -6.126
anchor_right = -6.126
margin_left = 281.914
margin_top = 5.0
margin_right = 392.914
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "%amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="action" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -310.0
margin_top = 310.0
margin_right = 311.0
margin_bottom = 408.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_primary" type="TextureButton" parent="action" groups=[
"action_btn",
]]
margin_left = 29.0
margin_right = 300.0
margin_bottom = 99.0
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 21 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="action/btn_primary"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.5
margin_top = -48.5
margin_right = 124.5
margin_bottom = 49.5
custom_fonts/font = SubResource( 3 )
custom_constants/line_spacing = -10
text = "%text%"
align = 1
valign = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="btn_secondary" type="TextureButton" parent="action" groups=[
"action_btn",
]]
margin_left = 320.0
margin_right = 591.0
margin_bottom = 99.0
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 23 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="action/btn_secondary"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.5
margin_top = -48.5
margin_right = 125.5
margin_bottom = 49.5
custom_fonts/font = SubResource( 4 )
custom_constants/line_spacing = -10
text = "%text%"
align = 1
valign = 1
autowrap = true
clip_text = true
max_lines_visible = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="control" type="Node2D" parent="."]
z_index = 1001

[node name="ctrl_left" type="TextureButton" parent="control" groups=[
"control_btn",
]]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -49.0
margin_right = -280.0
margin_bottom = 49.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 10 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_right" type="TextureButton" parent="control" groups=[
"control_btn",
]]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 280.0
margin_top = -49.0
margin_right = 340.0
margin_bottom = 49.0
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blocker" type="ColorRect" parent="control"]
visible = false
self_modulate = Color( 0, 0, 0, 0.117647 )
margin_left = -362.564
margin_top = -477.514
margin_right = 362.436
margin_bottom = 637.486
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window_lg" type="TextureRect" parent="control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -339.5
margin_top = -425.0
margin_right = 339.5
margin_bottom = 289.0
texture = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowName" type="Label" parent="control/window_lg"]
anchor_right = 1.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 22 )
text = "%Window_Name%"
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Control" parent="control/window_lg"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -317.5
margin_top = -265.0
margin_right = 317.5
margin_bottom = 337.0

[node name="long_text" type="RichTextLabel" parent="control/window_lg/content"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_right = -14.0
margin_bottom = -13.0
custom_fonts/normal_font = SubResource( 5 )
text = "%rich_text%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="social" type="TextureRect" parent="control/window_lg/content"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 40 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="setting" type="VBoxContainer" parent="control/window_lg/content"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="control/window_lg/content/setting"]
margin_right = 635.0
margin_bottom = 121.0
custom_constants/separation = 60
alignment = 1

[node name="sound_off" type="TextureButton" parent="control/window_lg/content/setting/hbox" groups=[
"sub_control_btn",
]]
margin_left = 35.0
margin_right = 287.0
margin_bottom = 121.0
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 44 )
texture_hover = ExtResource( 38 )

[node name="Label" type="Label" parent="control/window_lg/content/setting/hbox/sound_off"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -22.5
margin_right = 126.0
margin_bottom = 22.5
custom_fonts/font = ExtResource( 22 )
text = "Bisu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_on" type="TextureButton" parent="control/window_lg/content/setting/hbox" groups=[
"sub_control_btn",
]]
visible = false
margin_left = 312.0
margin_right = 564.0
margin_bottom = 122.0
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 39 )

[node name="Label" type="Label" parent="control/window_lg/content/setting/hbox/sound_on"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -22.5
margin_right = 126.0
margin_bottom = 22.5
custom_fonts/font = ExtResource( 22 )
text = "Aktif"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credit" type="TextureButton" parent="control/window_lg/content/setting/hbox" groups=[
"sub_control_btn",
]]
margin_left = 347.0
margin_right = 599.0
margin_bottom = 121.0
texture_normal = ExtResource( 34 )
texture_pressed = ExtResource( 43 )
texture_hover = ExtResource( 37 )

[node name="Label2" type="Label" parent="control/window_lg/content/setting/hbox/credit"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -22.5
margin_bottom = 22.5
custom_fonts/font = ExtResource( 22 )
text = "Kredit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window_close" type="TextureButton" parent="control/window_lg" groups=[
"control_btn",
]]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -80.0
margin_top = 21.9802
margin_right = -25.0
margin_bottom = 75.9802
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="AnimationPlayer" parent="."]
anims/wipe-In = SubResource( 6 )
anims/wipe-Out = SubResource( 7 )

[node name="overlay_transition" type="ColorRect" parent="transition"]
visible = false
margin_left = -40.0
margin_top = -34.0
margin_right = -40.0
margin_bottom = 1675.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="transition" to="." method="_transition_animation_finished"]
